[gd_scene load_steps=6 format=3 uid="uid://r4qwhh6syec1"]

[ext_resource type="Script" path="res://scripts/good_fish.gd" id="1_dgrtp"]
[ext_resource type="Texture2D" uid="uid://bn4qucqvr2w60" path="res://assets/доброрыба я.png" id="1_vb58l"]
[ext_resource type="Texture2D" uid="uid://4c24yishf7jd" path="res://assets/доброрыба ты.png" id="2_5a40t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fbs4h"]
radius = 75.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dtcyo"]
radius = 17.1172

[node name="good_fish" type="CharacterBody2D"]
z_index = 251
collision_layer = 32
collision_mask = 5
script = ExtResource("1_dgrtp")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2(2.05804, 2.12387)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fbs4h")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_vb58l")
flip_h = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_5a40t")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dtcyo")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="select_wander_point"]
